--- a/student.html
+++ b/student.html
@@ -5,8 +5,12 @@
     <title>Using jQuery Ajax with JSON</title>
 </head>
 <body>
+    <body>
+        <label>Enter a name
+            <input type="text" id="search">
+        </label>
 
-<button id="get">Get JSON Data</button>
+    <button id="get">Get JSON Data</button>
 
 <div id="output"></div>
 
@@ -15,9 +19,14 @@
 <script>
     $("#get").on("click", function(){
         $("#output").html("");
+        
         $.getJSON("classics.json", function(result) {
+            let search = $("#search").val().toLowerCase();
+            
             $.each(result, function(index, item) {
-                $("#output").append(item.bibliography.author.name);
+                if(item.bibliography.author.name.toLowerCase().includes(search)) {
+                    $("#output").append(item.bibliography.author.name + "<br>") ;
+                }
             });
         });
     });
